--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,10 @@
 <!-- start custom footer snippets -->
+
+<!-- Sitemap link -->
 <a href="/sitemap/">Sitemap</a>
+
+<!-- Number of visitors -->
+<a href='https://www.free-counters.org/'>https://www.Free-Counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=a109f8f7b5d830275f3b64806ffd222aeea06d3a'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1265618/t/0"></script> 
+
 <!-- end custom footer snippets -->
