--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -7,7 +7,8 @@
 
 <!-- Number of visitors -->
 Number of visitors since 21st November, 2024:
+<p style="color:transparent">
 <a href='https://www.free-counters.org/'>https://www.Free-Counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=a109f8f7b5d830275f3b64806ffd222aeea06d3a'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1265618/t/0"></script> 
-
+</p>
 <!-- end custom footer snippets -->
