--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,9 +1,7 @@
 <!-- start custom footer snippets -->
 
 <!-- Sitemap link -->
-<a href="/sitemap/">Sitemap</a>
-
-<br>
+<p><a href="/sitemap/">Sitemap</a></p>
 
 <!-- Number of visitors -->
 Number of visitors since 21st November, 2024:
